working on delete and update answer