@@ -8,17 +8,11 @@ import com.proxask.repository.QuestionRepository;
 import com.proxask.repository.UserRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.nio.file.AccessDeniedException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class QuestionService {
@@ -39,7 +33,7 @@ public class QuestionService {
                 new ResourceNotFoundException("Receiver not found"));
         Question question = modelMapper.map(questionDTO, Question.class);
         question.setReceiver(receiver);
-        if(!questionDTO.getSenderUsername().isBlank()){
+        if(questionDTO.getSenderUsername() != null){
             User sender =  userRepository
                     .findByUsername(questionDTO.getSenderUsername())
                     .orElseThrow(() -> new ResourceNotFoundException("Sender not found"));
@@ -67,23 +61,19 @@ public class QuestionService {
         User receiver = userRepository.findByUsername(receiverUsername).orElseThrow(() ->
                 new ResourceNotFoundException("Receiver not found"));
         List<Question> questionList = receiver.getReceiveQuestions();
-        List<QuestionDTO> questionDTOList = questionList.stream().map(question -> {
+        return questionList.stream().map(question -> {
            QuestionDTO questionDTO =  modelMapper.map(question,QuestionDTO.class);
            if(question.getSender() != null) questionDTO.setSenderUsername(question.getSender().getUsername());
            return questionDTO;
-        }).collect(Collectors.toList());
-
-        return questionDTOList;
+        }).toList();
 
     }
 
     @Transactional
-    public QuestionDTO deleteQuestionById(String questionId, Authentication authentication) throws AccessDeniedException {
+    public QuestionDTO deleteQuestionById(String questionId, Authentication authentication) {
         Question question = questionRepository.findById(questionId).orElseThrow(() ->
                 new ResourceNotFoundException("Question not found"));
-        if(!authentication.getName().equals(question.getReceiver().getUsername()))
-            throw new AccessDeniedException("Unauthorized access");
-        questionRepository.deleteById(questionId);
+        questionRepository.delete(question);
         QuestionDTO questionDTO = modelMapper.map(question, QuestionDTO.class);
         if(question.getSender() != null) questionDTO.setSenderUsername(question.getSender().getUsername());
         return questionDTO;
